--- a/.github/workflows/testing-client.yml
+++ b/.github/workflows/testing-client.yml
@@ -26,7 +26,7 @@ jobs:
         printf "%s" "${{ secrets.REACT_ENV_VARS }}" > .env
 
     - name: Build React App
-      run: npm run build
+      run: CI=false npm run build --if-present
 
     - name: Deploy to VPS (move build output)
       run: |
